--- a/apps/desktop/src/vault/app/vault/vault-v2.component.html
+++ b/apps/desktop/src/vault/app/vault/vault-v2.component.html
@@ -62,7 +62,7 @@
   >
     <div class="content">
       <div class="inner-content">
-        <img class="logo-image" alt="Bitwarden" aria-hidden="true" />
+        <img class="logo-image" alt="Principal Productions - Vault Manager" aria-hidden="true" />
       </div>
     </div>
   </div>
